fixed spacing, reorganized resume html for upcoming css

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
+  height: 50px;
 }
 
 #horznav ul li{
@@ -43,16 +44,6 @@
 	text-align: center;
 }
 
-h1{
-  font-family: 'Bebas Neue', cursive;
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  position: relative;
-  
-}
-
 .instructionsleft{
   position: relative;
   left: 1%;
@@ -67,20 +58,37 @@ h1{
   list-style: upper-roman;  
 }
 
-.instructionsright{
-  position: relative;
-  left: 5%;
-  float: right;
-  color: green;  
+#resback{
+  background-color: silver;
+}
+
+#resback h2{
+  color: rgb(204, 102, 0);
+  border: solid navy;
   box-sizing: border-box;
-  width: 50%;
+  width: 12.5%;
+  margin: auto; 
+  font-family: 'Bebas Neue', cursive;
+  
+}
+#resback h3{
+   
 }
 
-.instructionsright ul{
-  list-style: upper-roman;  
+#resback p{
+  width: 40%;
+  margin: auto;
+  
 }
 
+h1{
+  font-family: 'Bebas Neue', cursive;
+}
 
+iframe{
+  height: 300px;
+  width: 30%;
+}
 
 
 
